# AVA-Mirror

./: .firebaserc  .gitignore  LICENSE  README.md  docker-compose.yml  firebase.json
.github/workflows/: docker-deploy.yml  firebase-deploy.yml  tests.yml
backend-api/: .gitignore  Dockerfile  Program.cs  README.md  backend-api.csproj
dev/hand-gesture-detector/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  main.py  requirements.txt
dev/hand-gesture-detector/config/: hand_detector_config.py
dev/hand-gesture-detector/detection/: hand_detector.py
dev/hand-gesture-detector/gesture/: gestures.py
ecom-frontend/: package-lock.json  package.json
ecom-frontend/src/: App.tsx
ecom-frontend/src/components/: IntroAnimation.tsx
ecom-frontend/src/style/: LoadingAnimation.scss
infra/: README.md
mirror_mobile_app/: .gitignore  pubspec.yaml
mirror_mobile_app/android/app/: build.gradle.kts
mirror_mobile_app/android/app/src/main/: AndroidManifest.xml
mirror_mobile_app/android/app/src/main/kotlin/fr/avainfo/mirror_mobile_app/: MainActivity.kt
mirror_mobile_app/ios/Runner/: Info.plist
mirror_mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mirror_mobile_app/test/: widget_test.dart
mirror_software/: .gitignore  .metadata  README.md  pubspec.yaml
mirror_software/linux/: CMakeLists.txt
mirror_software/linux/runner/: my_application.cc
mirror_software/test/: widget_test.dart
mirror_software/windows/: CMakeLists.txt
mirror_software/windows/runner/: Runner.rc  main.cpp
mobile-app/: README.md
